# DynamicPoissonFactorization-python

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/dpf/: __init__.py  data.py  metrics.py  model.py  plotting.py  training.py
