[project]
name = "dynamicpoissonfactorization-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "neopyter>=0.3.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "torch>=2.9.1",
]
